Aggiornata la redirezione per accessi senza autorizzazione